--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
@@ -29,6 +29,10 @@ add_executable(create
   filepicker.cpp
   filepicker.h
   filepicker.ui
+  projectfile.cpp
+  projectfile.h
+  config.cpp
+  config.h
 )
 
 target_link_libraries(create PRIVATE Qt5::Widgets)
