--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(create LANGUAGES CXX)
+project(deflash LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -13,7 +13,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
-add_executable(create
+add_executable(deflash
   main.cpp
   mainwindow.cpp
   mainwindow.h
@@ -36,4 +36,4 @@ add_executable(create
   version.h
 )
 
-target_link_libraries(create PRIVATE Qt5::Widgets)
+target_link_libraries(deflash PRIVATE Qt5::Widgets)
